--- a/templates/display_entries.html
+++ b/templates/display_entries.html
@@ -97,6 +97,20 @@
 
         </div>
 
+        {% elif op=='rename' %}
+        <div class="container">
+            <h4>RENAME TABLE</h4>
+
+            <form action="/tables/edit/rename" method="POST">
+            <input type="text" name="old_table_name" placeholder="Old Table Name">
+            <h4>TO</h4>
+            <input type="text" name='new_table_name' placeholder="New Table Name">
+            <button type="submit">Execute</button>
+            </form>
+
+        </div>
+
+
         {% endif %}
     
     {% endif %}
