--- a/templates/display_entries.html
+++ b/templates/display_entries.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>Alumni Database</title>
 </head>
 <body>
     <h2>{{table_name}} 
         : {{EntriesOrSchema}}</h2>
-    <table>
+    <table border="1">
         <thead>
             <tr>
                 {%for col_name in table_col_names%}
@@ -116,7 +117,9 @@
     {% endif %}
 
 
-    
-    
+    <form action="/tables" method="GET">
+        <button type="submit">Go to Tables List</button>
+    </form>
+
 </body>
 </html>
