--- a/templates/display_tables.html
+++ b/templates/display_tables.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h2>Pick from the list of tables.</h2>
-    <table>
+    <table border="1">
         <thead>
             <tr>
                 <th>Table Number</th>
@@ -33,7 +33,11 @@
     <form action="/tables" method="POST">
         <input type="text" name="tableName" placeholder="Table Name">
         <button type="submit" name="schema">View Schema</button>
-        <button type="submit" name="entries">View Entries</button>
+        <button type="submit" name="entries">View Entries and Make Edits</button>
+    </form>
+
+    <form action="/" method="GET">
+        <button type="submit">Go to Homepage</button>
     </form>
 </body>
 </html>
