--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
     <h1>Welcome to the Alumni Database Web Application!</h1>
 
     <form action="/" method="POST">
-        <button type="submit">Work with the Database</button>
+        <button type="submit" name="edit">Work with the Database</button>
+        <button type="submit" name="team">View Team</button>
     </form>
 
 </body>
