Added error report feedback code

--- a/templates/errors.html
+++ b/templates/errors.html
@@ -7,6 +7,7 @@
     <title>Alumni Database</title>
 </head>
 <body>
-    <h1>Error- Bad Input</h1>
+    <h1>Error !</h1>
+    <h2>{{errorMessage}}</h2>
 </body>
 </html>
