--- a/templates/display_entries.html
+++ b/templates/display_entries.html
@@ -103,9 +103,10 @@
             <h4>RENAME TABLE</h4>
 
             <form action="/tables/edit/rename" method="POST">
-            <input type="text" name="old_table_name" placeholder="Old Table Name">
+            <h4>{{table_name}}</h4>
             <h4>TO</h4>
             <input type="text" name='new_table_name' placeholder="New Table Name">
+            <input type="hidden" name='table_name' value={{table_name}}>
             <button type="submit">Execute</button>
             </form>
 
