--- a/templates/team_details.html
+++ b/templates/team_details.html
@@ -4,28 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alumni Database</title>
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
+    <!-- <link rel="stylesheet" href="../static/styles/style.css"> -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Developers</title>
 </head>
 <body>
-    <h2>Team G1</h2>
-    <ul>
-        <li>Dhairya Shah</li>
-        <li>Nokzendi Aier</li>
-        <li>Harshvardhan Vala</li>
-        <li>Medhansh Singh</li>
-        <li>Joy Makwana</li>
-    </ul>
+    <div class="flex w-1/2 text-2xl m-auto justify-between text-center my-24">
+        <div>
+            <div class="pb-4 font-bold">Team G1</div>
+            <ul>
+                <li>Dhairya Shah</li>
+                <li>Nokzendi Aier</li>
+                <li>Harshvardhan Vala</li>
+                <li>Medhansh Singh</li>
+                <li>Joy Makwana</li>
+            </ul>
+        </div>
 
-    <h2>Team G2</h2>
-    <ul>
-        <li>Kanishk Singhal</li>
-        <li>Bhavesh Jain</li>
-        <li>Inderjeet Singh</li>
-        <li>Kalash Kankaria</li>
-        <li>Rahul Chembakasseril</li>
-    </ul>
+        <div>
+            <div class="pb-4 font-bold">Team G2</div>
+            <ul>
+                <li>Kanishk Singhal</li>
+                <li>Bhavesh Jain</li>
+                <li>Inderjeet Singh</li>
+                <li>Kalash Kankaria</li>
+                <li>Rahul Chembakasseril</li>
+            </ul>
+        </div>
+    </div>
 
-    <form action="/" method="GET">
+    <form action="/" method="GET" class="w-full flex justify-center text-xl">
         <button type="submit"> Go to Homepage</button>
     </form>
     
