--- a/templates/display_tables.html
+++ b/templates/display_tables.html
@@ -7,6 +7,7 @@
     <!-- <link rel="stylesheet" href="../styles/style.css"> -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
+    <link rel="icon" href="../static/education.png">
     <style>
         th{
             padding: 10px;
