--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
+    <link rel="icon" href="../static/education.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Alumni Database</title>
 </head>
@@ -15,6 +16,5 @@
         <button type="submit" name="edit">Work with the Database</button>
         <button type="submit" name="team">View Team</button>
     </form>
-
 </body>
 </html>
