--- a/templates/tables_before_after.html
+++ b/templates/tables_before_after.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
-    <title>Alumni Database</title>
+    <link rel="icon" href="../static/education.png">
+    <title>Results</title>
 </head>
 
 <body class="p-0 m-0 flex bg-[var(--color1)]">
