Styles for error page

--- a/templates/errors.html
+++ b/templates/errors.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
     <link rel="icon" href="../static/education.png">
-    <title>Alumni Database</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Error</title>    
 </head>
 <body>
-    <h1>Error !</h1>
-    <h2>{{errorMessage}}</h2>
+    <div class="text p-5 text-3xl font-bold">
+        <h1>Error!</h1>
+        <h2>{{errorMessage}}</h2>
+    </div>
 </body>
 </html>
