--- a/templates/display_tables.html
+++ b/templates/display_tables.html
@@ -58,8 +58,6 @@
         <button type="submit" name="entries">View Entries and Make Edits</button>
     </form> -->
 
-    <form action="/" method="GET" class="w-full flex justify-center text-xl">
-        <button type="submit">Go to Homepage</button>
-    </form>
+    <a href="/logout"><button>Logout</button></a>
 </body>
 </html>
