--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
+    <link rel="stylesheet" href="../static/styles/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Alumni Database</title>
 </head>
-<body>
-    <div class="text-center p-5 text-3xl font-bold">Welcome to the Alumni Database Web Application!</div>
 
-    <form action="/" method="POST" class="w-1/3 flex justify-between text-xl m-auto">
-        <button type="submit" name="edit">Work with the Database</button>
-        <button type="submit" name="team">View Team</button>
+<body class="h-screen">
+    <div class="text-center p-5 text-4xl font-bold leading-loose">Welcome to the<br> Alumni Database Web Application!
+    </div>
+
+    <!-- Create a login form with id password and login button -->
+    <form action="/" method="POST" class="max-w-min p-4 m-auto my-8">
+        <div class="flex flex-col justify-center items-center text-black">
+            <input type="name" name="name" placeholder="Name" class="border-2 border-black rounded-lg p-4 m-4 w-96">
+            <input type="password" name="password" placeholder="Password" class="border-2 border-black rounded-lg p-4 m-4 w-96">
+        </div>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <p class="text-red font-thin">{{ message }}</p>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        <button type="submit" name="login" class="flex m-auto my-6">Login</button>
     </form>
 
+    <button name="team" class="flex m-auto"><a href="/team">View Team</a></button>
+
 </body>
+
 </html>
