--- a/templates/index.html
+++ b/templates/index.html
@@ -29,14 +29,15 @@
                 {% endfor %}
             {% endif %}
         {% endwith %}
-        <button type="submit" name="login" class="flex m-auto my-6">Login</button>
+        <div class="w-full flex justify-center">
+            <button type="submit" name="login" class="my-6">Login</button>
+        </div>
     </form>
-<<<<<<< HEAD
+    
+    <div class="w-full flex justify-center">
+        <button name="team" class=""><a href="/team">View Team</a></button>
+    </div>
 
-    <button name="team" class="flex m-auto"><a href="/team">View Team</a></button>
-
-=======
->>>>>>> 5ec7097b0588511908187d49efb5e4bb1d903a71
 </body>
 
 </html>
