--- a/templates/tables_before_after.html
+++ b/templates/tables_before_after.html
@@ -74,9 +74,9 @@
             <button type="submit">Go to Tables List</button>
         </form>
         <br>
-        <form action="/tables/entries/{{table_name}}" method="POST">
-            <button type="submit">Go Back to {{table_name}} table</button>
-        </form>
+        <button>
+            <a href="/tables?tableName={{table_name}}">Go Back to {{table_name}} table</a>
+        </button>
 
     </div>
 
