--- a/templates/display_entries.html
+++ b/templates/display_entries.html
@@ -15,7 +15,7 @@
     <div
         class="w-1/2 overflow-x-scroll h-[calc(100vh-16px)] m-2 p-2 border-2 border-white rounded-lg bg-[var(--color2)]">
         <div class="capitalize text-center text-3xl mb-6">{{table_name}}</div>
-        <table border="1">
+        <table class="mx-auto">
             <thead>
                 <tr>
                     {%for col_name in table_col_names%}
