--- a/templates/index.html
+++ b/templates/index.html
@@ -9,25 +9,37 @@
     <link rel="stylesheet" href="../static/styles/style.css">
     <link rel="icon" href="../static/education.png">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <title>Alumni Database</title>
 </head>
 
-<body class="h-screen">
-    <div class="text-center p-5 text-4xl font-bold leading-loose">Welcome to the<br> Alumni Database Web Application!
-    </div>
+<body>
+
+    <nav
+        class="list-none flex flex-col justify-center items-center px-4 text-xl fixed right-0 z-50 transition-all top-1/3">
+        <li class="bg-gray-900 p-3 rounded-full hover:bg-yellow-300" id="back"><a href="javascript:history.back()"><i
+                    class=" bi bi-back"></i></a></li>
+        <li class="bg-gray-900 p-3 rounded-full my-6 hover:bg-yellow-300" id="home"><a href="../"><i
+                    class="bi bi-house h-8 w-8"></i></a></li>
+        <li class="bg-gray-900 p-3 rounded-full hover:bg-yellow-300" id="logout"><a href="../"><i
+                    class="bi bi-box-arrow-right"></i></a></li>
+    </nav>
+
+    <div class="text-center p-5 text-3xl font-bold">Welcome to the Alumni Database Web Application!</div>
 
     <!-- Create a login form with id password and login button -->
     <form action="/" method="POST" class="max-w-min p-4 m-auto my-8">
         <div class="flex flex-col justify-center items-center text-black">
             <input type="name" name="name" placeholder="Name" class="border-2 border-black rounded-lg p-4 m-4 w-96">
-            <input type="password" name="password" placeholder="Password" class="border-2 border-black rounded-lg p-4 m-4 w-96">
+            <input type="password" name="password" placeholder="Password"
+                class="border-2 border-black rounded-lg p-4 m-4 w-96">
         </div>
         {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                {% for message in messages %}
-                    <p class="text-red font-thin">{{ message }}</p>
-                {% endfor %}
-            {% endif %}
+        {% if messages %}
+        {% for message in messages %}
+        <p class="text-red font-thin">{{ message }}</p>
+        {% endfor %}
+        {% endif %}
         {% endwith %}
         <div class="w-full flex justify-center">
             <button type="submit" name="login" class="my-6">Login</button>
