Readme and Dump and Edits

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                     class=" bi bi-back"></i></a></li>
         <li class="bg-gray-900 p-3 rounded-full my-6 hover:bg-yellow-300" id="home"><a href="../"><i
                     class="bi bi-house h-8 w-8"></i></a></li>
-        <li class="bg-gray-900 p-3 rounded-full hover:bg-yellow-300" id="logout"><a href="../"><i
+        <li class="bg-gray-900 p-3 rounded-full hover:bg-yellow-300" id="logout"><a href="/logout"><i
                     class="bi bi-box-arrow-right"></i></a></li>
     </nav>
 
