--- a/templates/display_tables.html
+++ b/templates/display_tables.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,18 +8,32 @@
     <!-- <link rel="stylesheet" href="../styles/style.css"> -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="icon" href="../static/education.png">
     <style>
-        th{
+        th {
             padding: 10px;
         }
-        td{
+
+        td {
             padding: 5px;
         }
     </style>
     <title>Tables</title>
 </head>
+
 <body>
+
+    <nav
+        class="list-none flex flex-col justify-center items-center px-4 text-xl fixed right-0 z-50 transition-all top-1/3">
+        <li class="bg-gray-900 p-3 rounded-full hover:bg-yellow-300" id="back"><a href="javascript:history.back()"><i
+                    class=" bi bi-back"></i></a></li>
+        <li class="bg-gray-900 p-3 rounded-full my-6 hover:bg-yellow-300" id="home"><a href="/tables"><i
+                    class="bi bi-house h-8 w-8"></i></a></li>
+        <li class="bg-gray-900 p-3 rounded-full hover:bg-yellow-300" id="logout"><a href="/logout"><i
+                    class="bi bi-box-arrow-right"></i></a></li>
+    </nav>
+
     <div class="text-2xl text-center">List of tables</div>
     <div class="my-16 flex flex-wrap justify-center w-[72%] m-auto">
         {% for i in range(0,len) %}
@@ -35,11 +50,11 @@
                     </thead>
                     <tbody>
                         {% for k in schema[i] %}
-                            <tr>
-                                {% for j in range(0, len_col) %}
-                                <td>{{k[j]}}</td>
-                                {% endfor %}
-                            </tr>
+                        <tr>
+                            {% for j in range(0, len_col) %}
+                            <td>{{k[j]}}</td>
+                            {% endfor %}
+                        </tr>
                         {% endfor %}
                     </tbody>
                 </table>
@@ -59,6 +74,6 @@
         <button type="submit" name="entries">View Entries and Make Edits</button>
     </form> -->
 
-    <a href="/logout"><button>Logout</button></a>
 </body>
+
 </html>
