--- a/templates/errors.html
+++ b/templates/errors.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="icon" href="../static/education.png">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Error</title>    
+    <title>Error</title>
 </head>
+
 <body>
+
+    <nav
+        class="list-none flex flex-col justify-center items-center px-4 text-xl fixed right-0 z-50 transition-all top-1/3">
+        <li class="bg-gray-900 p-3 rounded-full hover:bg-yellow-300" id="back"><a href="javascript:history.back()"><i
+                    class=" bi bi-back"></i></a></li>
+        <li class="bg-gray-900 p-3 rounded-full my-6 hover:bg-yellow-300" id="home"><a href="/tables"><i
+                    class="bi bi-house h-8 w-8"></i></a></li>
+        <li class="bg-gray-900 p-3 rounded-full hover:bg-yellow-300" id="logout"><a href="/logout"><i
+                    class="bi bi-box-arrow-right"></i></a></li>
+    </nav>
+
     <div class="text p-5 text-3xl font-bold">
         <h1>Error!</h1>
         <h2>{{errorMessage}}</h2>
     </div>
 </body>
+
 </html>
