--- a/templates/tables_before_after.html
+++ b/templates/tables_before_after.html
@@ -7,11 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="icon" href="../static/education.png">
     <title>Results</title>
 </head>
 
 <body class="p-0 m-0 flex bg-[var(--color1)]">
+
+    <nav
+        class="list-none flex flex-col justify-center items-center px-4 text-xl fixed right-0 z-50 transition-all top-1/3">
+        <li class="bg-gray-900 p-3 rounded-full hover:bg-yellow-300" id="back"><a href="javascript:history.back()"><i
+                    class=" bi bi-back"></i></a></li>
+        <li class="bg-gray-900 p-3 rounded-full my-6 hover:bg-yellow-300" id="home"><a href="/tables"><i
+                    class="bi bi-house h-8 w-8"></i></a></li>
+        <li class="bg-gray-900 p-3 rounded-full hover:bg-yellow-300" id="logout"><a href="/logout"><i
+                    class="bi bi-box-arrow-right"></i></a></li>
+    </nav>
+
     <div
         class="w-1/2 overflow-x-scroll h-[calc(100vh-16px)] m-2 p-2 border-2 border-white rounded-lg bg-[var(--color2)]">
         <div class="capitalize text-center text-3xl mb-6">Before</div>
@@ -80,9 +92,10 @@
             <button type="submit" class="mx-auto">Go to Tables List</button>
         </form>
         <br>
-        <button>
-            <a href="/tables?tableName={{table_name}}">Go Back to {{table_name}} table</a>
-        </button>
+
+        <form action="/tables?tableName={{table_name}}" method="GET" class="flex">
+            <button type="submit" class="mx-auto">Go Back to {{table_name}} table</button>
+        </form>
 
     </div>
 
