--- a/templates/display_tables.html
+++ b/templates/display_tables.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="icon" href="../static/education.png">
+    <link rel="icon" href="../static/group.png">
     <style>
         th {
             padding: 10px;
