--- a/templates/errors.html
+++ b/templates/errors.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="icon" href="../static/education.png">
+    <link rel="icon" href="../static/group.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Error</title>
 </head>
@@ -24,9 +24,22 @@
                     class="bi bi-box-arrow-right"></i></a></li>
     </nav>
 
-    <div class="text p-5 text-3xl font-bold">
-        <h1>Error!</h1>
-        <h2>{{errorMessage}}</h2>
+    <div class="text p-5 text-3xl font-bold text-center">
+        <br/><br/>
+        <h1>Error!</h1><br/>
+        <h2>{{errorMessage}}</h2><br/>
+        <h2>{{errorDetails}}</h2>
+    </div>
+
+    <div class="w-full flex flex-col justify-center my-2">
+        <button type="submit" class="mx-auto my-5">
+            <a href="/tables">Go to Tables List</a>
+        </button>
+        <br>
+
+        <button type="submit" class="mx-auto">
+            <a href="/tables?tableName={{table_name}}">Go Back to {{table_name}} table</a>
+        </button>
     </div>
 </body>
 
