--- a/templates/team_details.html
+++ b/templates/team_details.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
     <!-- <link rel="stylesheet" href="../static/styles/style.css"> -->
-    <link rel="icon" href="../static/education.png">
+    <link rel="icon" href="../static/group.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Developers</title>
